@@ -8,21 +8,22 @@
 #include "psddl_hdf2psana/cspad.ddl.h"
 #include "psddl_hdf2psana/l3t.ddl.h"
 #include "psddl_hdf2psana/evr.ddl.h"
-#include "psddl_hdf2psana/camera.ddl.h"
+#include "psddl_hdf2psana/encoder.ddl.h"
 #include "psddl_hdf2psana/usdusb.ddl.h"
 #include "psddl_hdf2psana/timepix.ddl.h"
 #include "psddl_hdf2psana/epixsampler.ddl.h"
-#include "psddl_hdf2psana/encoder.ddl.h"
-#include "psddl_hdf2psana/acqiris.ddl.h"
+#include "psddl_hdf2psana/camera.ddl.h"
+#include "psddl_hdf2psana/partition.ddl.h"
 #include "psddl_hdf2psana/quartz.ddl.h"
 #include "psddl_hdf2psana/gsc16ai.ddl.h"
 #include "psddl_hdf2psana/bld.ddl.h"
-#include "psddl_hdf2psana/pulnix.ddl.h"
+#include "psddl_hdf2psana/genericpgp.ddl.h"
 #include "psddl_hdf2psana/fccd.ddl.h"
 #include "psddl_hdf2psana/imp.ddl.h"
 #include "psddl_hdf2psana/arraychar.ddl.h"
 #include "psddl_hdf2psana/pnccd.ddl.h"
 #include "psddl_hdf2psana/epics.ddl.h"
+#include "psddl_hdf2psana/orca.ddl.h"
 #include "psddl_hdf2psana/ipimb.ddl.h"
 #include "psddl_hdf2psana/princeton.ddl.h"
 #include "psddl_hdf2psana/control.ddl.h"
@@ -32,13 +33,12 @@
 #include "psddl_hdf2psana/andor.ddl.h"
 #include "psddl_hdf2psana/fli.ddl.h"
 #include "psddl_hdf2psana/oceanoptics.ddl.h"
-#include "psddl_hdf2psana/partition.ddl.h"
 #include "psddl_hdf2psana/timetool.ddl.h"
 #include "psddl_hdf2psana/lusi.ddl.h"
-#include "psddl_hdf2psana/orca.ddl.h"
+#include "psddl_hdf2psana/acqiris.ddl.h"
 #include "psddl_hdf2psana/rayonix.ddl.h"
 #include "psddl_hdf2psana/epix.ddl.h"
-#include "psddl_hdf2psana/genericpgp.ddl.h"
+#include "psddl_hdf2psana/pulnix.ddl.h"
 
 
 namespace {
